--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   </head>
 
   <body>
-
-
+    
+    <div class="emoji">
+        <div class="mask">
+            <div class="details"></div>
+        </div>
+    </div>
 
   </body>
 </html>
